<resources>
    <string name="app_name">NearInPost</string>
    <string name="main_nearest_in_post">Find nearest InPost?</string>
    <string name="machine_details_city_title">City:</string>
    <string name="machine_details_street_title">Street:</string>
    <string name="machine_details_postal_code_title">Postal code:</string>
    <string name="machine_details_location_desc_title">Location description:</string>
    <string name="machine_details_empty_field">No data</string>
    <string name="machine_details_distance_from">Distance from</string>
    <string name="custom_location_search_view_hint">Search for postal code or place</string>
    <string name="main_fragment_empty_text">No results, try something else :(</string>
    <string name="main_fragment_fresh_text">Nothing was searching</string>
    <string name="main_fragment_postal_code_text">Results for postal code</string>
    <string name="main_fragment_permission_denied_text">Location permission denied</string>
    <string name="main_fragment_holder_distance_unit">km</string>
    <string name="main_menu_in_post_max_results">inPost</string>
    <string name="main_max_results_3">3 results</string>
    <string name="main_max_results_5">5 results</string>
    <string name="main_max_results_10">10 results</string>
    <string name="main_max_results_dialog_title">Max inPost machines results</string>
    <string name="main_error_message">Something goes wrong, try again:(</string>
    <string name="main_searched_by_last_known_location">Results for last known location</string>
</resources>
