<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--TODO: Simplify layout, move attributes to styles.-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorSearchResultCard">
        <!--Distance from search postal card text-->
        <TextView
            android:id="@+id/machineDetailsDistanceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_half_margin"
            android:paddingEnd="@dimen/common_default_margin"
            android:paddingStart="@dimen/common_default_margin"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/common_standard_text_size" />
    </android.support.v7.widget.CardView>

    <!--Scrollview contains card with InPost machine details-->
    <ScrollView
        android:id="@+id/machineDetailsScrollChild"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorSearchResultCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--City layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_search_item_height"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/common_default_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/machine_details_city_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/common_standard_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/machineDetailsCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/machine_details_empty_field"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/common_standard_text_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_divider_size"
                    android:background="@color/colorSearchDivider" />
                <!--Street layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_search_item_height"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/common_default_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/machine_details_street_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/common_standard_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/machineDetailsStreet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/machine_details_empty_field"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/common_standard_text_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_divider_size"
                    android:background="@color/colorSearchDivider" />

                <!--Postal code layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_search_item_height"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/common_default_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/machine_details_postal_code_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/common_standard_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/machineDetailsPostalCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/machine_details_empty_field"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/common_standard_text_size" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_divider_size"
                    android:background="@color/colorSearchDivider" />

                <!--Place description-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_search_item_height"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/common_default_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/machine_details_location_desc_title"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/common_standard_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/machineDetailsLocationDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/machine_details_empty_field"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/common_standard_text_size" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>